--- a/src/index.html
+++ b/src/index.html
@@ -16,19 +16,15 @@
   </head>
   <body>
     <!-- Write your HTML code here, you can delete everything withing the body tags -->
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./assets/img/rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
-    </div>
+    <div class="card-container">
+        <div id="card" class="card">
+            <span id="suit-top-left" class="suit top-left"></span>
+            <span id="rank" class="rank"></span>
+            <span id="suit-bottom-right" class="suit bottom-right"></span>
+        </div>
 
+    </div>
+    <button id="new-card-button">Nueva Carta</button>
     <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
     <script type="module" src="/app.js"></script>
   </body>
