--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,9 @@
     <!-- Write your HTML code here, you can delete everything withing the body tags -->
     <div class="card-container">
         <div id="card" class="card">
-            <span id="suit-top-left" class="suit top-left"></span>
-            <span id="rank" class="rank"></span>
-            <span id="suit-bottom-right" class="suit bottom-right"></span>
+            <span id="palo-top-left" class="palo-top-left"></span>
+            <span id="number" class="number"></span>
+            <span id="palo-bottom-right" class="palo-bottom-right"></span>
         </div>
 
     </div>
